FLUID-5619: Fixed TOC items to have better legibility. - also shrank the footer text to 0.8rem.

--- a/src/static/css/infusion-docs.css
+++ b/src/static/css/infusion-docs.css
@@ -64,6 +64,7 @@ td {
 }
 
 .fl-prefsEditor-buttons button:focus,
+.infusion-docs-TOC li a:focus .infusion-docs-TOC-pageName,
 a:focus {
     outline: solid 0.2rem #008cba;
 }
@@ -196,7 +197,8 @@ a:focus {
 }
 
 .infusion-docs-TOC li {
-    margin-bottom: 1rem;
+    padding: 0.6rem 0;
+    border-top: 0.1rem solid #efefef;
 }
 
 .infusion-docs-category {
@@ -210,10 +212,15 @@ a:focus {
     display: block;
 }
 
+.infusion-docs-TOC li a:focus {
+    outline: none;
+}
+
 .infusion-docs-TOC li .infusion-docs-TOC-pageName {
     /* By default give each item in the TOC an active page style. */
     border-left: solid 0.2rem #FFCB00;
     padding-left: 0.2rem;
+    display: block;
 }
 
 .infusion-docs-TOC li a .infusion-docs-TOC-pageName {
@@ -314,9 +321,12 @@ div.infusion-docs-note {
     padding-top: 2rem;
     color: #FFFFFF;
     font-family: "OpenSans", Arial, Helvetica;
-    font-size: 1.1rem;
     text-align: center;
     max-width: 100%;
+}
+
+.infusion-docs-footer p {
+    font-size: 0.8rem;
 }
 
 .infusion-docs-footer a {
@@ -373,21 +383,37 @@ div.infusion-docs-note {
 
 .fl-theme-bw a:focus,
 .fl-theme-bw .fl-prefsEditor-buttons button:focus,
+.fl-theme-bw a:focus .infusion-docs-TOC-pageName,
 .fl-theme-by a:focus,
 .fl-theme-by .fl-prefsEditor-buttons button:focus {
     outline: 0.2rem solid #000000 !important;
 }
 .fl-theme-wb a:focus,
+.fl-theme-wb a:focus .infusion-docs-TOC-pageName,
 .fl-theme-wb .fl-prefsEditor-buttons button:focus {
     outline: 0.2rem solid #ffffff !important;
 }
 .fl-theme-yb a:focus,
+.fl-theme-yb a:focus .infusion-docs-TOC-pageName,
 .fl-theme-yb .fl-prefsEditor-buttons button:focus {
     outline: 0.2rem solid #ffff00 !important;
 }
 .fl-theme-lgdg a:focus,
+.fl-theme-lgdg a:focus .infusion-docs-TOC-pageName,
 .fl-theme-lgdg .fl-prefsEditor-buttons button:focus {
     outline: 0.2rem solid #bdbdbb !important;
+}
+
+/*
+Focus style exception: don't have focus appear around the anchor.
+Instead have it appear around the enclosed
+*/
+.fl-theme-bw .infusion-docs-TOC li a:focus,
+.fl-theme-wb .infusion-docs-TOC li a:focus,
+.fl-theme-by .infusion-docs-TOC li a:focus,
+.fl-theme-yb .infusion-docs-TOC li a:focus,
+.fl-theme-lgdg .infusion-docs-TOC li a:focus {
+    outline:none !important;
 }
 
 .fl-theme-bw .infusion-docs-container a:hover,
